# bsp-dev-c

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  DevC.ioc  DevC.jdebug  README.md  STM32F407XX_FLASH.ld  libxr  stm32f407ighx_flash.ld
.github/workflows/: test_build.yml  xrobot_stm32.yml
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h  stm32f4xx_hal_rcc.h
Test/: app_main.cpp  stm32_flash.hpp
USB_DEVICE/App/: usbd_cdc_if.h
User/: app_main.cpp  flash_map.hpp  libxr_config.yaml  stm32_flash.hpp  xrobot.yaml
cmake/: gcc-arm-none-eabi.cmake  mcu_stm32f4.cmake
cmake/stm32cubemx/: CMakeLists.txt
